# celerp-postgres

./: .gitignore  LICENSE  README.md  checksums.json  pyproject.toml
.github/workflows/: publish.yml
scripts/: build_wheels.py  update_version.py
src/celerp_postgres/: __init__.py
tests/: conftest.py  test_build_script.py  test_cluster.py  test_module.py
