[project]
name = "celerp-postgres"
version = "17.10.0"
description = "Full PostgreSQL server + client tools (pg_dump, psql, ...) as pip-installable wheels. No compilation, no system packages, no root."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
keywords = ["postgresql", "postgres", "embedded", "database", "binaries", "pg_dump", "self-contained", "portable"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Database :: Database Engines/Servers",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
]

[project.urls]
Repository = "https://github.com/celerp/celerp-postgres"
"Upstream binaries" = "https://github.com/theseus-rs/postgresql-binaries"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"celerp_postgres" = ["pginstall/**/*"]
